fixed spacing above content

--- a/Animal_WebApp/assets/MainStyle.css
+++ b/Animal_WebApp/assets/MainStyle.css
@@ -17,6 +17,11 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    min-height:480px;
+}
+
+.spaceAbove{
+    margin-top:15px;
 }
 
 .animalBox{
